# soroban-playground

./: Cargo.toml  package-lock.json  package.json  pr_body.md
.github/: dependabot.yml
.github/workflows/: backend-lint.yml  ci.yml
backend/: jest.config.cjs  package-lock.json  package.json
backend/docs/: load-testing.md  security-audit.md
backend/load-tests/: http.js  websocket.js
backend/migrations/: V004__add_webhooks_and_cors_whitelist.down.sql  V004__add_webhooks_and_cors_whitelist.up.sql  V004__contract_events.down.sql  V004__contract_events.up.sql  V005__zero_downtime_helpers.down.sql  V005__zero_downtime_helpers.up.sql
backend/scripts/: seed.js  warm-persisted-queries.js
backend/src/: server.js
backend/src/routes/: api.js  (+10 more)
backend/tests/: authService.test.js  batchSubmitter.test.js  cacheInterceptor.test.js  container.test.js  contractEventIndexer.test.js  corsConfig.test.js  cursorPagination.test.js  customErrors.test.js  favorites.test.js  graphql.e2e.test.js  http2.test.js  ledgerSyncService.test.js  memoryLeakDetector.test.js  persistedQueries.test.js  seed.test.js  serviceRegistry.test.js  sessionStore.test.js  signatureValidation.test.js  sportsPredictionMarket.test.js  swagger.test.js  syntheticAssets.unit.test.js  webhook.test.js  zeroDowntimeMigration.test.js
contracts/parametric-insurance/: Cargo.toml
contracts/parametric-insurance/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/twap-oracle/: Cargo.toml
contracts/twap-oracle/src/: lib.rs  storage.rs  test.rs  types.rs
frontend/: jest.config.js  next.config.ts  package.json
(+114 files in other folders)
