[package]
name = "soroban-parametric-insurance"
version = "0.1.0"
edition = "2021"
description = "Parametric insurance payout contract — automates claims based on oracle-reported trigger conditions"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.6"

[dev-dependencies]
soroban-sdk = { version = "21.0.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
